<resources>

    <string name="app_name">Mediafire</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Mediafire</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_connection">There is no Internet connection</string>
    <string name="wrong_credentials">Could not log you in.Please check your credentials</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_folder">Mediafire - Folder</string>
    <string name="folder_title">/Root</string>
    <string name="folder_item_name">Filename</string>
    <string name="folder_item_type">F</string>
    <string name="downloads">downloads</string>
    <string name="created">created</string>
    <string name="login_offline">Work Offline</string>
    <string name="store_password">medspy21</string>
    <string name="error_cant_read">Cannot read from the URL</string>
    <string name="login_remember">Remember me</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_full_import">Full import</string>
    <string name="ptr_pull_to_refresh">Pull to refresh folder</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing...</string>

</resources>